--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 .then((userCredential) => {
                     alert("લોગિન સફળ!");
                     // અહીં તમે બીજા પેજ પર મોકલી શકો છો
-                     window.location.href = "Dashboard-V1.0.html";
+                     window.location.href = "Dashboard.html";
 					 //window.location.href = "dashboard.html";
                 })
                 .catch((error) => alert("ભૂલ: " + error.message));
